--- a/index.html
+++ b/index.html
@@ -4,34 +4,45 @@
     <meta charset="UTF-8">
     <title>Travel tour</title>
     <link rel="stylesheet" href="src/css/styles.css">
+    <script src="https://kit.fontawesome.com/c5d43a2129.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&display=swap"
           rel="stylesheet">
 </head>
 <body>
-<div class="img-back"></div>
-<div class="img-back"></div>
-<div class="container">
-    <header>
-        <div class="logo-and-navbar">
-            <div class="logo">advento</div>
-            <div class="navbar">
-                <div class="item active">TripPlanner</div>
-                <div class="item">Destination</div>
-                <div class="item">Stories</div>
+
+<!--<div class="main-img"></div>-->
+
+<div class="allblock">
+    <div class="block1">
+        <div class="circle"></div>
+        <div class="layer line-back"></div>
+        <div class="block3">
+            <header>
+                <div class="logo-and-navbar">
+                    <div class="logo">advento</div>
+                    <div class="navbar">
+                        <div class="item active">TripPlanner</div>
+                        <div class="item">Destination</div>
+                        <div class="item">Stories</div>
+                    </div>
+                </div>
+                <div class="contact-us">Contact Us</div>
+            </header>
+            <div class="main-info">
+                <div class="subtitle-info"><h2>Choose the best destination</h2></div>
+                <div class="title-info">Adventure<br>Without BOUNDARIES...</div>
+            </div>
+            <div class="input-and-button">
+                <input type="text" class="find_input" placeholder="Find out the best place...">
             </div>
         </div>
-        <div class="contact-us">Contact Us</div>
-    </header>
-
-    <div class="main-info">
-        <div class="subtitle-info"><h2>Choose the best destination</h2></div>
-        <div class="title-info">Adventure<br>Without BOUNDARIES...</div>
     </div>
-    <div class="input-and-button">
-        <input type="text" class="find_input" placeholder="Find out the best place">
+    <div class="block2">
         <div class="button-search">Search</div>
     </div>
+</div>
 
+<div class="container">
     <h1>Experience <br> travel with us</h1>
     <div class="all-boxes">
         <div class="box-and-text">
@@ -71,5 +82,85 @@
             </div>
         </div>
     </div>
+    <h1>Choose <br> your category</h1>
+
+    <div class="info-and-arrows">
+        <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta doloremque
+            est,
+            excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam vel
+            voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum eaque
+            earum
+            in incidunt, iure labore libero magnam maiores maxime molestias neque
+        </div>
+        <div class="arrows">
+            <div class="arrows-distance">
+                <div class="arrow">
+                    <i class="fas fa-arrow-left"></i>
+                </div>
+                <div class="arrow">
+                    <i class="fas fa-arrow-right"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="all-boxes">
+        <div class="box img-category1">
+            <div class="name-category">Mountain</div>
+        </div>
+        <div class="box img-category2">
+            <div class="name-category">Waterfall</div>
+        </div>
+        <div class="box img-category3">
+            <div class="name-category">Snow</div>
+        </div>
+        <div class="box img-category4">
+            <div class="name-category">Nature</div>
+        </div>
+    </div>
+
+    <h1>Our <br> Adventure Trip</h1>
+    <div class="info-and-arrows">
+        <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta doloremque
+            est,
+            excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam vel
+            voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum eaque
+            earum
+            in incidunt, iure labore libero magnam maiores maxime molestias neque
+        </div>
+        <div class="arrows">
+            <div class="arrows-distance">
+                <div class="arrow">
+                    <i class="fas fa-arrow-left"></i>
+                </div>
+                <div class="arrow">
+                    <i class="fas fa-arrow-right"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="video-cover">
+
+        <div class="blackout">
+            <div class="circle-play">
+                <div class="circle-play-two">
+                    <i class="fas fa-play" style="color: #433A8B"></i>
+                </div>
+            </div>
+        </div>
+        <!--                    <iframe width="1170" height="700" src="https://www.youtube.com/embed/e8QKBu-qAPA" frameborder="0"-->
+        <!--                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"-->
+        <!--                        allowfullscreen></iframe>-->
+    </div>
+    <h1>Our <br>Awesome Clients</h1>
+    <div class="info-clients">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur deserunt
+        dignissimos ea, earum eos eum ipsam libero nisi, optio pariatur porro quae quam quas qui quibusdam, quos
+        repudiandae vel veniam vitae? Culpa error, laboriosam? Aperiam aut consectetur eum quod repellendus. Animi
+        aspernatur, aut blanditiis dignissimos
+    </div>
+</div>
+</div>
+
+<script src="parallax.js"></script>
 </body>
 </html>
