--- a/index.html
+++ b/index.html
@@ -10,39 +10,31 @@
 </head>
 <body>
 
-<!--<div class="main-img"></div>-->
-
-<div class="allblock">
-    <div class="block1">
-        <div class="circle"></div>
-        <div class="layer line-back"></div>
-        <div class="block3">
-            <header>
-                <div class="logo-and-navbar">
-                    <div class="logo">advento</div>
-                    <div class="navbar">
-                        <div class="item active">TripPlanner</div>
-                        <div class="item">Destination</div>
-                        <div class="item">Stories</div>
-                    </div>
-                </div>
-                <div class="contact-us">Contact Us</div>
-            </header>
-            <div class="main-info">
-                <div class="subtitle-info"><h2>Choose the best destination</h2></div>
-                <div class="title-info">Adventure<br>Without BOUNDARIES...</div>
-            </div>
-            <div class="input-and-button">
-                <input type="text" class="find_input" placeholder="Find out the best place...">
-            </div>
-        </div>
-    </div>
-    <div class="block2">
-        <div class="button-search">Search</div>
-    </div>
-</div>
+<div class="main-img"></div>
+<img src="img/circle.png" class="circle">
+<img src="img/line-back.png" class="layer line-back">
 
 <div class="container">
+    <header>
+        <div class="logo-and-navbar">
+            <div class="logo">advento</div>
+            <div class="navbar">
+                <div class="item active">TripPlanner</div>
+                <div class="item">Destination</div>
+                <div class="item">Stories</div>
+            </div>
+        </div>
+        <div class="contact-us">Contact Us</div>
+    </header>
+    <div class="main-info">
+        <div class="subtitle-info"><h2>Choose the best destination</h2></div>
+        <div class="title-info">Adventure<br>Without BOUNDARIES...</div>
+    </div>
+    <div class="input-and-button">
+        <input type="text" class="find_input" placeholder="Find out the best place...">
+        <div class="button-search">Search</div>
+    </div>
+
     <h1>Experience <br> travel with us</h1>
     <div class="all-boxes">
         <div class="box-and-text">
@@ -85,7 +77,8 @@
     <h1>Choose <br> your category</h1>
 
     <div class="info-and-arrows">
-        <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta doloremque
+        <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta
+            doloremque
             est,
             excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam vel
             voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum eaque
@@ -121,7 +114,8 @@
 
     <h1>Our <br> Adventure Trip</h1>
     <div class="info-and-arrows">
-        <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta doloremque
+        <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta
+            doloremque
             est,
             excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam vel
             voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum eaque
@@ -152,15 +146,129 @@
         <!--                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"-->
         <!--                        allowfullscreen></iframe>-->
     </div>
-    <h1>Our <br>Awesome Clients</h1>
-    <div class="info-clients">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur deserunt
-        dignissimos ea, earum eos eum ipsam libero nisi, optio pariatur porro quae quam quas qui quibusdam, quos
-        repudiandae vel veniam vitae? Culpa error, laboriosam? Aperiam aut consectetur eum quod repellendus. Animi
-        aspernatur, aut blanditiis dignissimos
+</div>
+<div class="path-about-clients">
+    <div class="container">
+        <h1>Our <br>Awesome Clients</h1>
+        <div class="info-clients">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur deserunt
+            dignissimos ea, earum eos eum ipsam libero nisi, optio pariatur porro quae quam quas qui quibusdam, quos
+            repudiandae vel veniam vitae? Culpa error, laboriosam? Aperiam aut consectetur eum quod repellendus. Animi
+            aspernatur, aut blanditiis dignissimos
+        </div>
+        <div class="clients">
+            <div class="arrow-clients left">
+                <i class="fas fa-angle-left" style="color: white"></i>
+            </div>
+            <div class="client num1 small"></div>
+            <div class="client num2 medium"></div>
+            <div class="client num3 big"></div>
+            <div class="client num4 medium"></div>
+            <div class="client num5 small"></div>
+            <div class="arrow-clients right">
+                <i class="fas fa-angle-right" style="color: white"></i>
+            </div>
+        </div>
+        <div class="info-client">
+            <div class="name-client">Alex Smith</div>
+            <div class="review">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, delectus dicta hic
+                ipsum laborum libero magnam ratione veritatis vitae voluptates
+            </div>
+        </div>
     </div>
 </div>
-</div>
 
-<script src="parallax.js"></script>
+<div class="feedback">
+    <div class="outdark-feedback">
+        <div class="container">
+            <div class="input-mail-and-button">
+                <div class="block-inp-and-button">
+                    <input class="input-email" placeholder="Enter your mail address">
+                    <div class="button-book">Book Now</div>
+                </div>
+                <!--        <div class="point-texture"></div>-->
+            </div>
+            <div class="text-end">START YOUR ADVENTURE WITH US</div>
+        </div>
+
+    </div>
+</div>
+<div class="container">
+    <div class="footer">
+        <div class="left-and-right-path">
+            <div class="left-path-footer">
+                <div class="logo">advento</div>
+                <div class="info-under-logo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aspernatur
+                    at
+                    dolor earum enim eos esse fugit
+                </div>
+                <div class="info-under-logo">
+                    +123 456 789<br>
+                    info@advento.com<br>
+                    www.advento.com<br>
+                </div>
+                <div class="icon-social">
+                    <i class="fab fa-facebook-f icon"></i>
+                    <i class="fab fa-twitter icon"></i>
+                    <i class="fab fa-pinterest-p icon"></i>
+                    <i class="fab fa-instagram icon"></i>
+                    <i class="fab fa-google-plus-g icon"></i>
+                </div>
+            </div>
+
+            <div class="right-path-footer">
+                <div class="column">
+                    <div class="title-footer-right">
+                        Activities
+                    </div>
+                    <div class="items-footer-right">
+                        <div class="item">Mountain Biking</div>
+                        <br>
+                        <div class="item">Hiking</div>
+                        <br>
+                        <div class="item">Destination</div>
+                        <br>
+                        <div class="item">Stories</div>
+                        <br>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="title-footer-right">
+                        Booking
+                    </div>
+                    <div class="items-footer-right">
+                        <div class="item">Ticket</div>
+                        <br>
+                        <div class="item">Travel Product</div>
+                        <br>
+                        <div class="item">Packages</div>
+                        <br>
+                        <div class="item">Accommodation</div>
+                        <br>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="title-footer-right">
+                        Contact
+                    </div>
+                    <div class="items-footer-right">
+                        <div class="item">Team</div>
+                        <br>
+                        <div class="item">Jobs</div>
+                        <br>
+                        <div class="item">Tourist Office</div>
+                        <br>
+                        <div class="item">Brochures</div>
+                        <br>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="made"> © All Rights Reserved by ADVENTO | Made with
+            <div class="heart"> ♥</div>
+            | 2019
+        </div>
+    </div>
+    <script src="parallax.js"></script>
 </body>
 </html>
