--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         <div class="logo-and-navbar">
             <div class="logo">advento</div>
             <div class="navbar">
-                <div class="item active">TripPlanner</div>
-                <div class="item">Destination</div>
-                <div class="item">Stories</div>
+                <div class="item active">TripPlanner
+                </div>
+                <div class="item">Destination
+                </div>
+                <div class="item">Stories
+                </div>
             </div>
         </div>
         <div class="contact-us">Contact Us</div>
@@ -34,120 +37,134 @@
         <input type="text" class="find_input" placeholder="Find out the best place...">
         <div class="button-search">Search</div>
     </div>
+</div>
+<div class="experience-travel">
+    <div class="container">
+        <h1>Experience <br> travel with us</h1>
 
-    <h1>Experience <br> travel with us</h1>
-    <div class="all-boxes">
-        <div class="box-and-text">
-            <div class="box img-experience-1"></div>
-            <div class="text-box">
-                <div class="title-box">Blue hill trial</div>
-                <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
-                    autem commodi esse, eum excepturi iste laudantium
+        <div class="all-boxes">
+            <div class="box-and-text">
+                <div class="box img-experience-1"></div>
+                <div class="text-box">
+                    <div class="title-box">Blue hill trial</div>
+                    <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
+                        autem commodi esse, eum excepturi iste laudantium
+                    </div>
+                </div>
+            </div>
+            <div class="box-and-text">
+                <div class="box img-experience-2"></div>
+                <div class="text-box">
+                    <div class="title-box">Blue hill trial</div>
+                    <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
+                        autem commodi esse, eum excepturi iste laudantium
+                    </div>
+                </div>
+            </div>
+            <div class="box-and-text">
+                <div class="box img-experience-3"></div>
+                <div class="text-box">
+                    <div class="title-box">Blue hill trial</div>
+                    <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
+                        autem commodi esse, eum excepturi iste laudantium
+                    </div>
+                </div>
+            </div>
+            <div class="box-and-text">
+                <div class="box img-experience-4"></div>
+                <div class="text-box">
+                    <div class="title-box">Blue hill trial</div>
+                    <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
+                        autem commodi esse, eum excepturi iste laudantium
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="box-and-text">
-            <div class="box img-experience-2"></div>
-            <div class="text-box">
-                <div class="title-box">Blue hill trial</div>
-                <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
-                    autem commodi esse, eum excepturi iste laudantium
-                </div>
-            </div>
-        </div>
-        <div class="box-and-text">
-            <div class="box img-experience-3"></div>
-            <div class="text-box">
-                <div class="title-box">Blue hill trial</div>
-                <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
-                    autem commodi esse, eum excepturi iste laudantium
-                </div>
-            </div>
-        </div>
-        <div class="box-and-text">
-            <div class="box img-experience-4"></div>
-            <div class="text-box">
-                <div class="title-box">Blue hill trial</div>
-                <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
-                    autem commodi esse, eum excepturi iste laudantium
-                </div>
-            </div>
-        </div>
-    </div>
-    <h1>Choose <br> your category</h1>
-
-    <div class="info-and-arrows">
-        <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta
-            doloremque
-            est,
-            excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam vel
-            voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum eaque
-            earum
-            in incidunt, iure labore libero magnam maiores maxime molestias neque
-        </div>
-        <div class="arrows">
-            <div class="arrows-distance">
-                <div class="arrow">
-                    <i class="fas fa-arrow-left"></i>
-                </div>
-                <div class="arrow">
-                    <i class="fas fa-arrow-right"></i>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="all-boxes">
-        <div class="box img-category1">
-            <div class="name-category">Mountain</div>
-        </div>
-        <div class="box img-category2">
-            <div class="name-category">Waterfall</div>
-        </div>
-        <div class="box img-category3">
-            <div class="name-category">Snow</div>
-        </div>
-        <div class="box img-category4">
-            <div class="name-category">Nature</div>
-        </div>
-    </div>
-
-    <h1>Our <br> Adventure Trip</h1>
-    <div class="info-and-arrows">
-        <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta
-            doloremque
-            est,
-            excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam vel
-            voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum eaque
-            earum
-            in incidunt, iure labore libero magnam maiores maxime molestias neque
-        </div>
-        <div class="arrows">
-            <div class="arrows-distance">
-                <div class="arrow">
-                    <i class="fas fa-arrow-left"></i>
-                </div>
-                <div class="arrow">
-                    <i class="fas fa-arrow-right"></i>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="video-cover">
-
-        <div class="blackout">
-            <div class="circle-play">
-                <div class="circle-play-two">
-                    <i class="fas fa-play" style="color: #433A8B"></i>
-                </div>
-            </div>
-        </div>
-        <!--                    <iframe width="1170" height="700" src="https://www.youtube.com/embed/e8QKBu-qAPA" frameborder="0"-->
-        <!--                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"-->
-        <!--                        allowfullscreen></iframe>-->
     </div>
 </div>
-<div class="path-about-clients">
+<div class="choose-caterory">
+    <div class="container">
+        <h1>Choose <br> your category</h1>
+        <div class="info-and-arrows">
+            <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta
+                doloremque
+                est,
+                excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam
+                vel
+                voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum
+                eaque
+                earum
+                in incidunt, iure labore libero magnam maiores maxime molestias neque
+            </div>
+            <div class="arrows">
+                <div class="arrows-distance">
+                    <div class="arrow">
+                        <i class="fas fa-arrow-left"></i>
+                    </div>
+                    <div class="arrow">
+                        <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="all-boxes">
+            <div class="box img-category1">
+                <div class="name-category">Mountain</div>
+            </div>
+            <div class="box img-category2">
+                <div class="name-category">Waterfall</div>
+            </div>
+            <div class="box img-category3">
+                <div class="name-category">Snow</div>
+            </div>
+            <div class="box img-category4">
+                <div class="name-category">Nature</div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="adventure-trip">
+    <div class="container">
+        <h1>Our <br> Adventure Trip</h1>
+        <div class="info-and-arrows">
+            <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta
+                doloremque
+                est,
+                excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam
+                vel
+                voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum
+                eaque
+                earum
+                in incidunt, iure labore libero magnam maiores maxime molestias neque
+            </div>
+            <div class="arrows">
+                <div class="arrows-distance">
+                    <div class="arrow">
+                        <i class="fas fa-arrow-left"></i>
+                    </div>
+                    <div class="arrow">
+                        <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="video-cover">
+            <div class="blackout">
+                <div class="circle-play">
+                    <div class="circle-play-two">
+                        <i class="fas fa-play" style="color: #433A8B"></i>
+                    </div>
+                </div>
+            </div>
+            <!--                    <iframe width="1170" height="700" src="https://www.youtube.com/embed/e8QKBu-qAPA" frameborder="0"-->
+            <!--                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"-->
+            <!--                        allowfullscreen></iframe>-->
+        </div>
+    </div>
+</div>
+
+<div class="awesome-clients">
     <div class="container">
         <h1>Our <br>Awesome Clients</h1>
         <div class="info-clients">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur deserunt
@@ -170,7 +187,8 @@
         </div>
         <div class="info-client">
             <div class="name-client">Alex Smith</div>
-            <div class="review">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, delectus dicta hic
+            <div class="review">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, delectus dicta
+                hic
                 ipsum laborum libero magnam ratione veritatis vitae voluptates
             </div>
         </div>
@@ -192,8 +210,8 @@
 
     </div>
 </div>
-<div class="container">
-    <div class="footer">
+<div class="footer">
+    <div class="container">
         <div class="left-and-right-path">
             <div class="left-path-footer">
                 <div class="logo">advento</div>
@@ -221,13 +239,13 @@
                         Activities
                     </div>
                     <div class="items-footer-right">
-                        <div class="item">Mountain Biking</div>
+                        <div class="item-footer">Mountain Biking</div>
                         <br>
-                        <div class="item">Hiking</div>
+                        <div class="item-footer">Hiking</div>
                         <br>
-                        <div class="item">Destination</div>
+                        <div class="item-footer">Destination</div>
                         <br>
-                        <div class="item">Stories</div>
+                        <div class="item-footer">Stories</div>
                         <br>
                     </div>
                 </div>
@@ -236,13 +254,13 @@
                         Booking
                     </div>
                     <div class="items-footer-right">
-                        <div class="item">Ticket</div>
+                        <div class="item-footer">Ticket</div>
                         <br>
-                        <div class="item">Travel Product</div>
+                        <div class="item-footer">Travel Product</div>
                         <br>
-                        <div class="item">Packages</div>
+                        <div class="item-footer">Packages</div>
                         <br>
-                        <div class="item">Accommodation</div>
+                        <div class="item-footer">Accommodation</div>
                         <br>
                     </div>
                 </div>
@@ -251,13 +269,13 @@
                         Contact
                     </div>
                     <div class="items-footer-right">
-                        <div class="item">Team</div>
+                        <div class="item-footer">Team</div>
                         <br>
-                        <div class="item">Jobs</div>
+                        <div class="item-footer">Jobs</div>
                         <br>
-                        <div class="item">Tourist Office</div>
+                        <div class="item-footer">Tourist Office</div>
                         <br>
-                        <div class="item">Brochures</div>
+                        <div class="item-footer">Brochures</div>
                         <br>
                     </div>
                 </div>
