fix site and adapt

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
 <div class="main-img"></div>
-<img src="img/circle.png" class="circle">
-<img src="img/line-back.png" class="layer line-back">
+<div class="circle"></div>
+<div class="layer line-back"></div>
 
 <div class="container">
     <header>
