--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Travel tour</title>
     <link rel="stylesheet" href="src/css/styles.css">
     <script src="https://kit.fontawesome.com/c5d43a2129.js" crossorigin="anonymous"></script>
