--- a/index.html
+++ b/index.html
@@ -14,203 +14,203 @@
 <div class="main-img"></div>
 <div class="circle"></div>
 <div class="layer line-back"></div>
-
-<div class="container">
-    <header>
-        <div class="logo-and-navbar">
-            <div class="logo">advento</div>
-            <div class="navbar">
-                <div class="item active">TripPlanner
-                </div>
-                <div class="item">Destination
-                </div>
-                <div class="item">Stories
-                </div>
-            </div>
-        </div>
-        <div class="contact-us">Contact Us</div>
-    </header>
-    <div class="main-info">
-        <div class="subtitle-info"><h2>Choose the best destination</h2></div>
-        <div class="title-info">Adventure<br>Without BOUNDARIES...</div>
-    </div>
-    <div class="input-and-button">
-        <input type="text" class="find_input" placeholder="Find out the best place...">
-        <div class="button-search">Search</div>
-    </div>
-</div>
-<div class="experience-travel">
+<div class="starting-section">
     <div class="container">
-        <h1>Experience <br> travel with us</h1>
-
-        <div class="all-boxes">
-            <div class="box-and-text">
-                <div class="box img-experience-1"></div>
-                <div class="text-box">
-                    <div class="title-box">Blue hill trial</div>
-                    <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
-                        autem commodi esse, eum excepturi iste laudantium
+        <header class="header">
+            <div class="logo-and-navbar">
+                <div class="logo">advento</div>
+                <div class="navbar">
+                    <div class="navbar__item active">TripPlanner
+                    </div>
+                    <div class="navbar__item">Destination
+                    </div>
+                    <div class="navbar__item">Stories
                     </div>
                 </div>
             </div>
-            <div class="box-and-text">
-                <div class="box img-experience-2"></div>
-                <div class="text-box">
-                    <div class="title-box">Blue hill trial</div>
-                    <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
-                        autem commodi esse, eum excepturi iste laudantium
-                    </div>
-                </div>
-            </div>
-            <div class="box-and-text">
-                <div class="box img-experience-3"></div>
-                <div class="text-box">
-                    <div class="title-box">Blue hill trial</div>
-                    <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
-                        autem commodi esse, eum excepturi iste laudantium
-                    </div>
-                </div>
-            </div>
-            <div class="box-and-text">
-                <div class="box img-experience-4"></div>
-                <div class="text-box">
-                    <div class="title-box">Blue hill trial</div>
-                    <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
-                        autem commodi esse, eum excepturi iste laudantium
-                    </div>
-                </div>
-            </div>
+            <div class="contact-us">Contact Us</div>
+        </header>
+        <div class="main-info">
+            <div class="subtitle">Choose the best destination</div>
+            <div class="main__title title">Adventure<br>Without BOUNDARIES...</div>
+        </div>
+        <div class="input-and-button">
+            <input type="text" class="find_input" placeholder="Find out the best place...">
+            <div class="button-search">Search</div>
         </div>
     </div>
 </div>
-<div class="choose-caterory">
+
+
+<div class="experience">
     <div class="container">
-        <h1>Choose <br> your category</h1>
-        <div class="info-and-arrows">
-            <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta
-                doloremque
-                est,
-                excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam
-                vel
-                voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum
-                eaque
-                earum
-                in incidunt, iure labore libero magnam maiores maxime molestias neque
-            </div>
-            <div class="arrows">
-                <div class="arrows-distance">
-                    <div class="arrow">
-                        <i class="fas fa-arrow-left"></i>
-                    </div>
-                    <div class="arrow">
-                        <i class="fas fa-arrow-right"></i>
-                    </div>
+        <div class="experience__title title">Experience <br> travel with us</div>
+        <div class="experience__column">
+            <div class="box img-experience-1"></div>
+            <div class="text-box">
+                <div class="title-box">Blue hill trial</div>
+                <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
+                    autem commodi esse, eum excepturi iste laudantium
                 </div>
             </div>
         </div>
-
-        <div class="all-boxes">
-            <div class="box img-category1">
-                <div class="name-category">Mountain</div>
+        <div class="experience__column">
+            <div class="box img-experience-2"></div>
+            <div class="text-box">
+                <div class="title-box">Blue hill trial</div>
+                <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
+                    autem commodi esse, eum excepturi iste laudantium
+                </div>
             </div>
-            <div class="box img-category2">
-                <div class="name-category">Waterfall</div>
+        </div>
+        <div class="experience__column">
+            <div class="box img-experience-3"></div>
+            <div class="text-box">
+                <div class="title-box">Blue hill trial</div>
+                <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
+                    autem commodi esse, eum excepturi iste laudantium
+                </div>
             </div>
-            <div class="box img-category3">
-                <div class="name-category">Snow</div>
-            </div>
-            <div class="box img-category4">
-                <div class="name-category">Nature</div>
+        </div>
+        <div class="experience__column">
+            <div class="box img-experience-4"></div>
+            <div class="text-box">
+                <div class="title-box">Blue hill trial</div>
+                <div class="subtitle-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto
+                    autem commodi esse, eum excepturi iste laudantium
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="adventure-trip">
-    <div class="container">
-        <h1>Our <br> Adventure Trip</h1>
-        <div class="info-and-arrows">
-            <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta
-                doloremque
-                est,
-                excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam
-                vel
-                voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum
-                eaque
-                earum
-                in incidunt, iure labore libero magnam maiores maxime molestias neque
-            </div>
-            <div class="arrows">
-                <div class="arrows-distance">
-                    <div class="arrow">
-                        <i class="fas fa-arrow-left"></i>
-                    </div>
-                    <div class="arrow">
-                        <i class="fas fa-arrow-right"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="video-cover">
-            <div class="blackout">
-                <div class="circle-play">
-                    <div class="circle-play-two">
-                        <i class="fas fa-play" style="color: #433A8B"></i>
-                    </div>
-                </div>
-            </div>
-            <!--                    <iframe width="1170" height="700" src="https://www.youtube.com/embed/e8QKBu-qAPA" frameborder="0"-->
-            <!--                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"-->
-            <!--                        allowfullscreen></iframe>-->
-        </div>
-    </div>
-</div>
+<!--<div class="choose-caterory">-->
+<!--    <div class="container">-->
+<!--        <h1>Choose <br> your category</h1>-->
+<!--        <div class="info-and-arrows">-->
+<!--            <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta-->
+<!--                doloremque-->
+<!--                est,-->
+<!--                excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam-->
+<!--                vel-->
+<!--                voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum-->
+<!--                eaque-->
+<!--                earum-->
+<!--                in incidunt, iure labore libero magnam maiores maxime molestias neque-->
+<!--            </div>-->
+<!--            <div class="arrows">-->
+<!--                <div class="arrows-distance">-->
+<!--                    <div class="arrow">-->
+<!--                        <i class="fas fa-arrow-left"></i>-->
+<!--                    </div>-->
+<!--                    <div class="arrow">-->
+<!--                        <i class="fas fa-arrow-right"></i>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
-<div class="awesome-clients">
-    <div class="container">
-        <h1>Our <br>Awesome Clients</h1>
-        <div class="info-clients">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur deserunt
-            dignissimos ea, earum eos eum ipsam libero nisi, optio pariatur porro quae quam quas qui quibusdam, quos
-            repudiandae vel veniam vitae? Culpa error, laboriosam? Aperiam aut consectetur eum quod repellendus. Animi
-            aspernatur, aut blanditiis dignissimos
-        </div>
-        <div class="clients">
-            <div class="arrow-clients left">
-                <i class="fas fa-angle-left" style="color: white"></i>
-            </div>
-            <div class="client num1 small"></div>
-            <div class="client num2 medium"></div>
-            <div class="client num3 big"></div>
-            <div class="client num4 medium"></div>
-            <div class="client num5 small"></div>
-            <div class="arrow-clients right">
-                <i class="fas fa-angle-right" style="color: white"></i>
-            </div>
-        </div>
-        <div class="info-client">
-            <div class="name-client">Alex Smith</div>
-            <div class="review">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, delectus dicta
-                hic
-                ipsum laborum libero magnam ratione veritatis vitae voluptates
-            </div>
-        </div>
-    </div>
-</div>
+<!--        <div class="boxes">-->
+<!--            <div class="box img-category1">-->
+<!--                <div class="name-category">Mountain</div>-->
+<!--            </div>-->
+<!--            <div class="box img-category2">-->
+<!--                <div class="name-category">Waterfall</div>-->
+<!--            </div>-->
+<!--            <div class="box img-category3">-->
+<!--                <div class="name-category">Snow</div>-->
+<!--            </div>-->
+<!--            <div class="box img-category4">-->
+<!--                <div class="name-category">Nature</div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<div class="adventure-trip">-->
+<!--    <div class="container">-->
+<!--        <h1>Our <br> Adventure Trip</h1>-->
+<!--        <div class="info-and-arrows">-->
+<!--            <div class="info-under-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam dicta-->
+<!--                doloremque-->
+<!--                est,-->
+<!--                excepturi fugit, labore mollitia natus obcaecati officiis perspiciatis quod sed tempore tenetur ullam-->
+<!--                vel-->
+<!--                voluptatibus. Ab architecto asperiores autem commodi corporis cupiditate debitis doloremque dolorum-->
+<!--                eaque-->
+<!--                earum-->
+<!--                in incidunt, iure labore libero magnam maiores maxime molestias neque-->
+<!--            </div>-->
+<!--            <div class="arrows">-->
+<!--                <div class="arrows-distance">-->
+<!--                    <div class="arrow">-->
+<!--                        <i class="fas fa-arrow-left"></i>-->
+<!--                    </div>-->
+<!--                    <div class="arrow">-->
+<!--                        <i class="fas fa-arrow-right"></i>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="video-cover">-->
+<!--            <div class="blackout">-->
+<!--                <div class="circle-play">-->
+<!--                    <div class="circle-play-two">-->
+<!--                        <i class="fas fa-play" style="color: #433A8B"></i>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            &lt;!&ndash;                    <iframe width="1170" height="700" src="https://www.youtube.com/embed/e8QKBu-qAPA" frameborder="0"&ndash;&gt;-->
+<!--            &lt;!&ndash;                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"&ndash;&gt;-->
+<!--            &lt;!&ndash;                        allowfullscreen></iframe>&ndash;&gt;-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
-<div class="feedback">
-    <div class="outdark-feedback">
-        <div class="container">
-            <div class="input-mail-and-button">
-                <div class="block-inp-and-button">
-                    <input class="input-email" placeholder="Enter your mail address">
-                    <div class="button-book">Book Now</div>
-                </div>
-                <!--        <div class="point-texture"></div>-->
-            </div>
-            <div class="text-end">START YOUR ADVENTURE WITH US</div>
-        </div>
+<!--<div class="awesome-clients">-->
+<!--    <div class="container">-->
+<!--        <h1>Our <br>Awesome Clients</h1>-->
+<!--        <div class="info-clients">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur deserunt-->
+<!--            dignissimos ea, earum eos eum ipsam libero nisi, optio pariatur porro quae quam quas qui quibusdam, quos-->
+<!--            repudiandae vel veniam vitae? Culpa error, laboriosam? Aperiam aut consectetur eum quod repellendus. Animi-->
+<!--            aspernatur, aut blanditiis dignissimos-->
+<!--        </div>-->
+<!--        <div class="clients">-->
+<!--            <div class="arrow-clients left">-->
+<!--                <i class="fas fa-angle-left" style="color: white"></i>-->
+<!--            </div>-->
+<!--            <div class="client num1 small"></div>-->
+<!--            <div class="client num2 medium"></div>-->
+<!--            <div class="client num3 big"></div>-->
+<!--            <div class="client num4 medium"></div>-->
+<!--            <div class="client num5 small"></div>-->
+<!--            <div class="arrow-clients right">-->
+<!--                <i class="fas fa-angle-right" style="color: white"></i>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="info-client">-->
+<!--            <div class="name-client">Alex Smith</div>-->
+<!--            <div class="review">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, delectus dicta-->
+<!--                hic-->
+<!--                ipsum laborum libero magnam ratione veritatis vitae voluptates-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
-    </div>
-</div>
+<!--<div class="feedback">-->
+<!--    <div class="outdark-feedback">-->
+<!--        <div class="container">-->
+<!--            <div class="input-mail-and-button">-->
+<!--                <div class="block-inp-and-button">-->
+<!--                    <input class="input-email" placeholder="Enter your mail address">-->
+<!--                    <div class="button-book">Book Now</div>-->
+<!--                </div>-->
+<!--                &lt;!&ndash;        <div class="point-texture"></div>&ndash;&gt;-->
+<!--            </div>-->
+<!--            <div class="text-end">START YOUR ADVENTURE WITH US</div>-->
+<!--        </div>-->
+
+<!--    </div>-->
+<!--</div>-->
 <div class="footer">
     <div class="container">
         <div class="left-and-right-path">
@@ -288,6 +288,7 @@
             | 2019
         </div>
     </div>
+</div>
     <script src="parallax.js"></script>
 </body>
 </html>
